--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Blog</title>
-</head>
-<body>
-{{content}}
-</body>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include header.html %}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {% include footer.html %}
+
+  </body>
+
 </html>
